profile-dev-v1.0.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lastflag-profile-microservice
spec:
  selector:
    matchLabels:
      app: lastflag-profile-microservice
  template:
    metadata:
      labels:
        app: lastflag-profile-microservice
    spec:
      containers:
      - name: lastflag-profile-microservice
        image: 031132114012.dkr.ecr.eu-central-1.amazonaws.com/lastflag-profile:v1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lastflag-profile-microservice
  annotations:
    version: v1.0.0
    release: dev
  labels:
    app: lastflag-profile-microservice
spec:
  selector:
    app: lastflag-profile-microservice
  ports:
    - protocol: TCP
      port: 7569
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - lf.argentics.vbardin.com
    secretName: lastflag-tls
  rules:
  - host: lf.argentics.vbardin.com
    http:
      paths:
      - pathType: Prefix
        path: "/profile"
        backend:
          service:
            name: lastflag-profile-microservice
            port:
              number: 7569
  ingressClassName: nginx
