profile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lastflag-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - lf.argentics.vbardin.com
    secretName: lastflag-tls
  rules:
  - host: lf.argentics.vbardin.com
    http:
      paths:
      - pathType: Prefix
        path: "/profile"
        backend:
          service:
            name: lastflag-profile-microservice
            port:
              number: 7569
  ingressClassName: nginx
